# Machine-Learning

./: README.md  SklearnRL_C++Model.ipynb  Taller2_HPC.ipynb  TallerPandas.ipynb
Modelos Machine Learning/: Modelo_Regresion_Lineal.ipynb  Modelo_Regresion_Logistica.ipynb
Modelos Machine Learning/Regresion Lineal/: Modelo_Regresion_Lineal.ipynb
RegresionLineal/: CMakeLists.txt  TallerParcialML.ipynb  extoeigen.cpp  extoeigen.h  main.cpp  modellinealregression.cpp  modellinealregression.h  tallerparcialml.py
